--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <title>Tic Tac Toe</title>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
+<body>
+
+
+  <script src="./src/game.js"></script>
+  <script src="./src/player.js"></script>
+  <script src="./src/main.js"></script>
+</body>
 
