Add HTML skeleton

--- a/index.html
+++ b/index.html
@@ -6,8 +6,25 @@
   <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 <body>
+  <section>
+    <h1>
+      🔴
+    </h1>
+  </section>
+  <section>
+    <h2>
+      Someone's Turn
+    </h2>
+    <article>
+      
+    </article>
+  </section>
+    <h3>
+      🔵
+    </h3>
+  <section>
 
-
+  </section>
   <script src="./src/game.js"></script>
   <script src="./src/player.js"></script>
   <script src="./src/main.js"></script>
