Lightly match comp

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 <body>
-  <section>
+  <section class="left-box side-box">
     <h1>
       🔴
     </h1>
   </section>
-  <section>
+  <section class="main-box">
     <h2>
       Someone's Turn
     </h2>
@@ -19,11 +19,10 @@
       
     </article>
   </section>
+  <section class="right-box side-box">
     <h3>
       🔵
     </h3>
-  <section>
-
   </section>
   <script src="./src/game.js"></script>
   <script src="./src/player.js"></script>
