Recover files from the deep

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       Someone's Turn
     </h2>
     <article>
-      
+      <img
     </article>
   </section>
   <section class="right-box side-box">
