Add game board to HTML and CSS, add articles in HTML that hold win count

--- a/index.html
+++ b/index.html
@@ -8,21 +8,35 @@
 <body>
   <section class="left-box side-box">
     <h1>
-      🔴
+      X
     </h1>
+    <article>
+      0 wins
+    </article>
   </section>
   <section class="main-box">
     <h2>
       Someone's Turn
     </h2>
-    <article>
-      <img
-    </article>
+    <div class="game-board">
+      <div class="square top-left">0</div>
+      <div class="square top-center">1</div>
+      <div class="square top-right">2</div>
+      <div class="square middle-left">3</div>
+      <div class="square middle-center">4</div>
+      <div class="square middle-right">5</div>
+      <div class="square bottom-left">6</div>
+      <div class="square bottom-center">7</div>
+      <div class="square bottom-right">8</div>
+    </div>
   </section>
   <section class="right-box side-box">
     <h3>
-      🔵
+      O
     </h3>
+    <article>
+      0 wins
+    </article>
   </section>
   <script src="./src/player.js"></script>
   <script src="./src/game.js"></script>
