Add game board to HTML and CSS fix

--- a/index.html
+++ b/index.html
@@ -18,17 +18,35 @@
     <h2>
       Someone's Turn
     </h2>
-    <div class="game-board">
-      <div class="square top-left">0</div>
-      <div class="square top-center">1</div>
-      <div class="square top-right">2</div>
-      <div class="square middle-left">3</div>
-      <div class="square middle-center">4</div>
-      <div class="square middle-right">5</div>
-      <div class="square bottom-left">6</div>
-      <div class="square bottom-center">7</div>
-      <div class="square bottom-right">8</div>
-    </div>
+    <article class="game-board">
+      <p class="square top-left">
+        0
+      </p>
+      <p class="square top-center">
+        1
+      </p>
+      <p class="square top-right">
+        2
+      </p>
+      <p class="square middle-left">
+        3
+      </p>
+      <p class="square middle-center">
+        4
+      </p>
+      <p class="square middle-right">
+        5
+      </p>
+      <p class="square bottom-left">
+        6
+      </p>
+      <p class="square bottom-center">
+        7
+      </p>
+      <p class="square bottom-right">
+        8
+      </p>
+      </article>
   </section>
   <section class="right-box side-box">
     <h3>
