Change game board from p to ul tags

--- a/index.html
+++ b/index.html
@@ -18,35 +18,35 @@
     <h2>
       Someone's Turn
     </h2>
-    <article class="game-board">
-      <p class="square top-left">
+    <li class="game-board">
+      <ul class="square top-left">
         0
-      </p>
-      <p class="square top-center">
+      </ul>
+      <ul class="square top-center">
         1
-      </p>
-      <p class="square top-right">
+      </ul>
+      <ul class="square top-right">
         2
-      </p>
-      <p class="square middle-left">
+      </ul>
+      <ul class="square middle-left">
         3
-      </p>
-      <p class="square middle-center">
+      </ul>
+      <ul class="square middle-center">
         4
-      </p>
-      <p class="square middle-right">
+      </ul>
+      <ul class="square middle-right">
         5
-      </p>
-      <p class="square bottom-left">
+      </ul>
+      <ul class="square bottom-left">
         6
-      </p>
-      <p class="square bottom-center">
+      </ul>
+      <ul class="square bottom-center">
         7
-      </p>
-      <p class="square bottom-right">
+      </ul>
+      <ul class="square bottom-right">
         8
-      </p>
-      </article>
+      </ul>
+    </li>
   </section>
   <section class="right-box side-box">
     <h3>
