Update DOM with current players game piece, add check for draw using turn count

--- a/index.html
+++ b/index.html
@@ -19,31 +19,31 @@
       Someone's Turn
     </h2>
     <li class="game-board">
-      <ul class="square top-left">
+      <ul class="square top-left" id="0">
         0
       </ul>
-      <ul class="square top-center">
+      <ul class="square top-center" id="1">
         1
       </ul>
-      <ul class="square top-right">
+      <ul class="square top-right" id="2">
         2
       </ul>
-      <ul class="square middle-left">
+      <ul class="square middle-left" id="3">
         3
       </ul>
-      <ul class="square middle-center">
+      <ul class="square middle-center" id="4">
         4
       </ul>
-      <ul class="square middle-right">
+      <ul class="square middle-right" id="5">
         5
       </ul>
-      <ul class="square bottom-left">
+      <ul class="square bottom-left" id="6">
         6
       </ul>
-      <ul class="square bottom-center">
+      <ul class="square bottom-center" id="7">
         7
       </ul>
-      <ul class="square bottom-right">
+      <ul class="square bottom-right" id="8">
         8
       </ul>
     </li>
