Change title to signify winner on win

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>
       X
     </h1>
-    <article>
+    <article class="x-wins">
       0 wins
     </article>
   </section>
@@ -20,31 +20,22 @@
     </h2>
     <li class="game-board">
       <ul class="square top-left" id="0">
-        0
       </ul>
       <ul class="square top-center" id="1">
-        1
       </ul>
       <ul class="square top-right" id="2">
-        2
       </ul>
       <ul class="square middle-left" id="3">
-        3
       </ul>
       <ul class="square middle-center" id="4">
-        4
       </ul>
-      <ul class="square middle-right" id="5">
-        5
+      <ul class="square middle-right" id="5">  
       </ul>
       <ul class="square bottom-left" id="6">
-        6
       </ul>
       <ul class="square bottom-center" id="7">
-        7
       </ul>
       <ul class="square bottom-right" id="8">
-        8
       </ul>
     </li>
   </section>
@@ -52,7 +43,7 @@
     <h3>
       O
     </h3>
-    <article>
+    <article class="o-wins">
       0 wins
     </article>
   </section>
