Change resetOnDraw function to checkDraw. Now included in the check for win or draw conditional each click

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </section>
   <section class="main-box">
     <h2>
-      Someone's Turn
+      X to move
     </h2>
     <li class="game-board">
       <ul class="square top-left" id="0">
