adjust font sizes and rename html headers

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <section class="left-box side-box">
-    <h1>
+    <h1 class="x-header">
       X
     </h1>
     <article class="x-wins">
@@ -15,7 +15,7 @@
     </article>
   </section>
   <section class="main-box">
-    <h2>
+    <h2 class="main-header">
       X to move
     </h2>
     <li class="game-board">
@@ -40,7 +40,7 @@
     </li>
   </section>
   <section class="right-box side-box">
-    <h3>
+    <h3 class="o-header">
       O
     </h3>
     <article class="o-wins">
