Adjust CSS styling to correct font sizes. Redsignate headers to paragraphs as it was interfering with font sizing

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 </head>
 <body>
   <section class="left-box side-box">
-    <h1 class="x-header">
+    <p class="x-header">
       X
-    </h1>
+    </p>
     <article class="x-wins">
       0 wins
     </article>
   </section>
   <section class="main-box">
-    <h2 class="main-header">
-      X to move
-    </h2>
+    <p class="main-header">
+      X to move!
+    </p>
     <li class="game-board">
       <ul class="square top-left" id="0">
       </ul>
@@ -40,9 +40,9 @@
     </li>
   </section>
   <section class="right-box side-box">
-    <h3 class="o-header">
+    <p class="o-header">
       O
-    </h3>
+    </p>
     <article class="o-wins">
       0 wins
     </article>
