Pass wave evaluation errors. No images present so no alt tags added

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 </head>
 <body>
   <section class="left-box side-box">
-    <p class="x-header">
+    <header class="x-header">
       X
-    </p>
+    </header>
     <article class="x-wins">
       0 wins
     </article>
   </section>
   <section class="main-box">
-    <p class="main-header">
+    <h1 class="main-header">
       X to move!
-    </p>
+    </h1>
     <li class="game-board">
       <ul class="square top-left" id="0">
       </ul>
@@ -40,9 +40,9 @@
     </li>
   </section>
   <section class="right-box side-box">
-    <p class="o-header">
+    <header class="o-header">
       O
-    </p>
+    </header>
     <article class="o-wins">
       0 wins
     </article>
