Add closing HTML tag and match turing styling guide

--- a/index.html
+++ b/index.html
@@ -1,54 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Tic Tac Toe</title>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="./styles.css">
-</head>
-<body>
-  <section class="left-box side-box">
-    <header class="x-header">
-      X
-    </header>
-    <article class="x-wins">
-      0 wins
-    </article>
-  </section>
-  <section class="main-box">
-    <h1 class="main-header">
-      X to move!
-    </h1>
-    <li class="game-board">
-      <ul class="square top-left" id="0">
-      </ul>
-      <ul class="square top-center" id="1">
-      </ul>
-      <ul class="square top-right" id="2">
-      </ul>
-      <ul class="square middle-left" id="3">
-      </ul>
-      <ul class="square middle-center" id="4">
-      </ul>
-      <ul class="square middle-right" id="5">  
-      </ul>
-      <ul class="square bottom-left" id="6">
-      </ul>
-      <ul class="square bottom-center" id="7">
-      </ul>
-      <ul class="square bottom-right" id="8">
-      </ul>
-    </li>
-  </section>
-  <section class="right-box side-box">
-    <header class="o-header">
-      O
-    </header>
-    <article class="o-wins">
-      0 wins
-    </article>
-  </section>
-  <script src="./src/player.js"></script>
-  <script src="./src/game.js"></script>
-  <script src="./src/main.js"></script>
-</body>
-
+  <head>
+    <title>Tic Tac Toe</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./styles.css">
+  </head>
+  <body>
+    <section class="left-box side-box">
+      <header class="x-header">
+        X
+      </header>
+      <article class="x-wins">
+        0 wins
+      </article>
+    </section>
+    <section class="main-box">
+      <h1 class="main-header">
+        X to move!
+      </h1>
+      <li class="game-board">
+        <ul class="square top-left" id="0">
+        </ul>
+        <ul class="square top-center" id="1">
+        </ul>
+        <ul class="square top-right" id="2">
+        </ul>
+        <ul class="square middle-left" id="3">
+        </ul>
+        <ul class="square middle-center" id="4">
+        </ul>
+        <ul class="square middle-right" id="5">  
+        </ul>
+        <ul class="square bottom-left" id="6">
+        </ul>
+        <ul class="square bottom-center" id="7">
+        </ul>
+        <ul class="square bottom-right" id="8">
+        </ul>
+      </li>
+    </section>
+    <section class="right-box side-box">
+      <header class="o-header">
+        O
+      </header>
+      <article class="o-wins">
+        0 wins
+      </article>
+    </section>
+    <script src="./src/player.js"></script>
+    <script src="./src/game.js"></script>
+    <script src="./src/main.js"></script>
+  </body>
+</html>
